[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Collection of sockets wrapped for convenience "
documentation = "https://docs.rs/socket-collection/"
license = "MIT OR BSD-3-Clause"
name = "socket-collection"
readme = "README.md"
repository = "https://github.com/maidsafe/socket-collection"
version = "0.3.0"

[dependencies]
byteorder = "~1.1.0"
log = "~0.3.6"
maidsafe_utilities = "~0.15.0"
mio = "~0.6.9"
quick-error = "~1.2.2"
serde = "~1.0.25"
serde_derive = "~1.0.25"
unwrap = "~1.1.0"

#[dependencies.libudt4-sys]
#version = "~0.2.0"
#git = "https://github.com/eminence/udt-rs.git"
#optional = true

#[dependencies.udt]
#version = "0.2.0"
#git = "https://github.com/eminence/udt-rs.git"
#optional = true

#[features]
#enable-udt = ["libudt4-sys", "udt"]
