[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Collection of sockets wrapped for convenience "
documentation = "https://docs.rs/socket-collection/"
license = "MIT OR BSD-3-Clause"
name = "socket-collection"
readme = "README.md"
repository = "https://github.com/maidsafe/socket-collection"
version = "0.2.0"

[dependencies]
byteorder = "~1.2.7"
log = "~0.4.6"
maidsafe_utilities = "~0.17.0"
mio = "~0.6.16"
libc = "=0.2.42"
quick-error = "~1.2.2"
serde = "~1.0.80"
serde_derive = "~1.0.80"
unwrap = "~1.2.1"

[dependencies.libudt4-sys]
git = "https://github.com/eminence/udt-rs.git"
optional = true

[dependencies.udt]
git = "https://github.com/eminence/udt-rs.git"
optional = true

[dev-dependencies]
net-literals = "0.1.2"
rand = "0.5.5"

[features]
enable-udt = [
    "libudt4-sys",
    "udt",
]
net_sim = []

[target."cfg(target_os = \"linux\")".dev-dependencies]
futures = "0.1.18"
tokio-core = "0.1.12"

[target."cfg(target_os = \"linux\")".dev-dependencies.netsim]
git = "https://github.com/povilasb/netsim"
rev = "update-libc"
