[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Collection of sockets wrapped for convenience "
documentation = "https://docs.rs/socket-collection/"
license = "MIT OR BSD-3-Clause"
name = "socket-collection"
readme = "README.md"
repository = "https://github.com/maidsafe/socket-collection"
version = "0.4.0"
edition = "2018"

[dependencies]
log = "~0.4.6"
maidsafe_utilities = "~0.17.0"
mio = "~0.6.16"
quick-error = "~1.2.2"
safe_crypto = "~0.5.0"
serde = "~1.0.80"
serde_derive = "~1.0.80"
unwrap = "~1.2.1"

[dev-dependencies]
hamcrest2 = "~0.2.3"
mio-extras = "~2.0.5"
proptest = "~0.8.7"
rand = "~0.5.5"

#[dependencies.libudt4-sys]
#version = "~0.2.0"
#git = "https://github.com/eminence/udt-rs.git"
#optional = true

#[dependencies.udt]
#version = "0.2.0"
#git = "https://github.com/eminence/udt-rs.git"
#optional = true

#[features]
#enable-udt = ["libudt4-sys", "udt"]
